# Video-Editor-Lite

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: export.rs  media.rs  mod.rs  project.rs  proxy.rs
src-tauri/src/models/: types.rs
src/components/EffectsPanel/: EffectsPanel.tsx
src/components/FileBrowser/: FileBrowser.tsx
src/components/Layout/: Layout.tsx
src/components/MediaGrid/: MediaGrid.tsx
src/components/Timeline/: Timeline.tsx
src/components/VideoPreview/: VideoPreview.tsx
src/hooks/: useAutosave.ts  useKeyboard.ts
src/store/: effectsStore.ts  exportStore.ts  mediaStore.ts  projectStore.ts  timelineStore.ts
src/types/: index.ts
src/utils/: formatTime.ts  id.ts
